# lilygo-esp32s2-t8-oled

./: Cargo.toml  README.md
lilygo-t8-rs/: .gitignore  Cargo.toml  README.md
lilygo-t8-rs/.cargo/: config.toml
lilygo-t8-rs/doc/: board_reference.md  schematic.md
lilygo-t8-rs/src/: hw.rs  i2c_compat.rs  lib.rs
lilygo-t8-rs/src/apps/: menu.rs  mod.rs  screen_test.rs  thermal.rs
mlx90640/: Cargo.toml  README.md
mlx90640/src/: bad_pixels.rs  calculations.rs  calibration.rs  driver.rs  lib.rs  math.rs  patterns.rs  types.rs
