[package]
edition      = "2024"
name         = "lilygo-t8-rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lilygo-t8-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s2", "unstable"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s2"] }

critical-section = "1.2.0"

embedded-hal = "1.0"

mipidsi = "0.8"
display-interface-spi = "0.5"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3"

libm = "0.2"

mlx9064x = { version = "0.2.1", default-features = false, features = ["libm"] }
embedded-hal-02 = { version = "0.2", package = "embedded-hal" }

[profile.dev]
codegen-units = 1
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = 's'

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
