[package]
edition      = "2024"
name         = "lilygo-t8-rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lilygo-t8-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s2", "unstable"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s2"] }

critical-section = "1.2.0"

embedded-hal = "1.0"

mipidsi = "0.8"
display-interface-spi = "0.5"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3"

mlx90640 = { path = "../mlx90640", features = ['precompute'] }
